<resources>
    <string name="app_name">PHH-FRN</string>
    <string name="hint_email_input">Email</string>
    <string name="hint_password_input">Password</string>
    <string name="label_login_activity">Login</string>
    <string name="description_email_icon">Email</string>
    <string name="description_password_icon">Password</string>
    <string name="label_reset_password">Reset Password</string>
    <string name="button_text_login">Login</string>
    <string name="hintUserNameInput">UserName</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="button_create_account_text">Create Account</string>
    <string name="text_app_settings">Application Settings</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="text_help_n_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="text_share_app">Share App</string>
    <string name="text_logout">Logout</string>
    <string name="item_name_text">Farming Item Name</string>
    <string name="user_email_com">user@email.com</string>
    <string name="item_default_price_text">UGX</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s
        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="call_user_texte">CALL SELLER</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_into_account">Sign Into Account</string>
    <string name="no_account_text">Have no account yet?</string>
    <string name="have_account_text">Already Have An Account?</string>
    <string name="hint_phone_input">Phone Number (07***)</string>
    <string name="empty_email_and_password_error_text">Please ensure that email and password fields are not empty</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="product_details_txt">Product Details</string>
    <string name="product_price_txt">Enter Product Price (Must be in ugx)</string>
    <string name="upload_string">Upload</string>
    <string name="product_cover_image">Add Product Cover Image</string>
    <string name="tap_here">Tap here</string>
    <string name="tap_image_to_product_images">Tap Image to Product Images</string>
    <string name="hire_technician">Hire Technician</string>
    <string name="enter_technician_name">Enter Technician Name</string>
    <string name="technician_role_details">Technician Role Details</string>
    <string name="technician_role">Enter Technician Role</string>
    <string name="tunda_home">PHH-FRN Home</string>
    <string name="enter_technician_location">Enter Technician Location</string>
    <string name="enter_technician_base_price">Enter Technician Base Price</string>
    <string name="add_technician_profile_image">Add technician Profile Image</string>
    <string name="advisory_title">Advisory Title</string>
</resources>