<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userNameInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/hintUserNameInput"
        app:hintTextColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconContentDescription="@string/description_email_icon"
        app:startIconDrawable="@drawable/ic_baseline_account_box_24"
        app:startIconTint="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/hint_email_input"
        app:hintTextColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameInputLayout"
        app:startIconContentDescription="@string/description_email_icon"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:startIconTint="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_phone_input"
        app:hintTextColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="@id/emailInputLayout"
        app:layout_constraintStart_toStartOf="@id/emailInputLayout"
        app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
        app:startIconContentDescription="@string/description_email_icon"
        app:startIconDrawable="@drawable/ic_baseline_local_phone_24"
        app:startIconTint="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/locationInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Eg (Kampala)"
        app:hintTextColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="@id/phoneInputLayout"
        app:layout_constraintStart_toStartOf="@id/phoneInputLayout"
        app:layout_constraintTop_toBottomOf="@id/phoneInputLayout"
        app:startIconContentDescription="@string/description_email_icon"
        app:startIconDrawable="@drawable/ic_baseline_add_location"
        app:startIconTint="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/locationInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_password_input"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="@id/locationInputLayout"
        app:layout_constraintStart_toStartOf="@id/locationInputLayout"
        app:layout_constraintTop_toBottomOf="@id/locationInputLayout"
        app:startIconContentDescription="@string/description_password_icon"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:startIconTint="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_confirm_password"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="@id/passwordInputLayout"
        app:layout_constraintStart_toStartOf="@id/passwordInputLayout"
        app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
        app:startIconContentDescription="@string/description_password_icon"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:startIconTint="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonSignIn"
        style="@style/SubmitButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_create_account_text"
        app:layout_constraintEnd_toEndOf="@id/confirmPasswordInputLayout"
        app:layout_constraintStart_toStartOf="@id/confirmPasswordInputLayout"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordInputLayout" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/have_account_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/toLoginText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignIn" />

    <TextView
        android:id="@+id/toLoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_text_login"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignIn" />

</androidx.constraintlayout.widget.ConstraintLayout>