<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NewProductActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">
            <LinearLayout
                android:id="@+id/formContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_product_name"
                    android:textSize="18dp"
                    android:layout_marginTop="18dp"
                    android:textColor="#000000"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/productNameEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_bg"
                        android:textColor="#000000"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/product_details_txt"
                    android:textSize="18dp"
                    android:textColor="#000000" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/productDetailsEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_bg"
                        android:textColor="#000000"
                        android:inputType="textMultiLine"/>

                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/product_price_txt"
                    android:textSize="18dp"
                    android:textColor="#000000" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/productPriceEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_bg"
                        android:textColor="#000000"
                        android:inputType="number"/>

                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/product_cover_image"
                    android:textSize="18dp"
                    android:textColor="#000000" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:id="@+id/addCoverPic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_bg"
                        android:ems="10"
                        android:text="@string/tap_here"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/pdtCoverImageView"
                    android:layout_width="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_height="300dp"
                    android:visibility="gone"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tap_image_to_product_images"
                    android:textSize="18dp"
                    android:textColor="#000000"/>
                <ImageView
                    android:id="@+id/addImagesView"
                    android:layout_width="100dp"
                    android:layout_marginTop="8dp"
                    android:layout_height="100dp"
                    app:srcCompat="@drawable/ic_add_image"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginTop="8dp"
                    android:id="@+id/productImagesRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <Button
                android:id="@+id/saveProductButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/formContainer"
                style="@style/SubmitButtonStyle"
                android:layout_marginTop="16dp"
                android:text="@string/upload_string"/>
        </RelativeLayout>
    </ScrollView>

</LinearLayout>