<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NewTechnicianActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">
            <LinearLayout
                android:id="@+id/formContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:text="@string/enter_technician_name"
                    android:textColor="#000000"
                    android:textSize="18dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/technicianNameEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_bg"
                        android:textColor="#000000"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/technician_role"
                    android:textSize="18dp"
                    android:textColor="#000000" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/technicianRoleEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_bg"
                        android:textColor="#000000"
                        android:inputType="textMultiLine"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/technician_role_details"
                    android:textSize="18dp"
                    android:textColor="#000000" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/technicianDetailsEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_bg"
                        android:textColor="#000000"
                        android:inputType="textMultiLine"/>

                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:text="@string/enter_technician_location"
                    android:textColor="#000000"
                    android:textSize="18dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/technicianLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_bg"
                        android:textColor="#000000"/>

                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_technician_base_price"
                    android:textSize="18dp"
                    android:textColor="#000000" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/technicianBasePriceEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_bg"
                        android:textColor="#000000"
                        android:inputType="number"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Enter Technician Contact"
                    android:textSize="18dp"
                    android:textColor="#000000" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/technicianContact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_bg"
                        android:textColor="#000000"
                        android:inputType="number"/>

                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_technician_profile_image"
                    android:textSize="18dp"
                    android:textColor="#000000" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:id="@+id/addCoverPic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_bg"
                        android:ems="10"
                        android:text="@string/tap_here"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/techCoverImageView"
                    android:layout_width="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_height="300dp"
                    android:visibility="gone"/>



            </LinearLayout>
            <Button
                android:id="@+id/saveTechnicianButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/formContainer"
                style="@style/SubmitButtonStyle"
                android:layout_marginTop="16dp"
                android:text="@string/upload_string"/>
        </RelativeLayout>
    </ScrollView>

</LinearLayout>